[REVISION 20060908]

[FIXED] validates_presence_of not being applied under MySQL; empty defaults are represented as blank rather than nil.

[REVISION 20060818]

[FIXED] 'Before updating scaffolding from new DB schema, try creating a table for your model (<model>)' when running ./script/generate scaffold <model>.

[FIXED] 'relation "system_settings" does not exist' when running a migrate with system_settings plugin installed.

[REVISION 20060816]

[FIXED] Overly greedy regex ignoring all date/time columns.

[REVISION 20060812]

[CHANGED] Documentation updated to reflect the fact that no further action is required once the plugin is installed.

[REVISION 20060812]

[FIXED] Documentation mentions :integer => true options; this should have read :only_integer => true.

[REVISION 20060803]

[FIXED] Revision 50 comments out the validates_presence_of magic on line 13 in belongs_to_with_schema_validations.

[REVISION 20060802]

[NEW] Support for validates_uniqueness_of for single-column unique indexes.

[CHANGED] Error message for boolean fields to be the same as the default for validates_presence_of

[REVISION 20060723]

[FIXED] Workaround for a "feature" of the way validates_presence_of handles boolean fields. See http://dev.rubyonrails.org/ticket/5090 and http://dev.rubyonrails.org/ticket/3334

[REVISION 20060719]

[NEW] Support validates_presence_of for belongs_to associations.

[REVISION 20060718]

[FIXED] String test checks #class instead of #klass

[CHANGED] Separated out check for null from validation of numericality. This means you'll get a "xxx can't be blank" rather than an "xx isn't a number" which seems more intuitive to me.

[FIXED] Default check should consider nil explicitly to allow for false.

[REVISION 20060717]

[NEW] Initial version.

[FIXED] Ignore columns ending in: _id, _count, _at, _on.

[NEW] Support validates_numericality_of for numbers (including :integer => true)

[NEW] Support validates_length_of for strings